# CallQA

./: .gitignore  NOTICE.md  PLAN.md  README.md  pyproject.toml  requirements.txt
callqa/: __init__.py
callqa/asr/: __init__.py  metrics.py  normalize.py  providers.py  transcript.py  whisper_adapter.py
callqa/audio/: __init__.py  telephone.py
callqa/datasets/: __init__.py  harpervalley.py  verify.py
callqa/diarization/: metrics.py  pyannote_adapter.py
callqa/registry/: __init__.py  schema.py  store.py
callqa/synth/: assembler.py  banks.py  generator.py  script_schema.py  tts.py  voices.py
callqa/synth/banks/: __init__.py  billing.py  cancellation.py  refund.py  tech_support.py
data/harpervalley/: subset_manifest.json
data/registry/: registry.jsonl
data/synthetic/labels/: syn-billing-01.json  syn-billing-02.json  syn-billing-03.json  syn-billing-04.json  syn-billing-05.json  (+15 more)
docs/: DATASET_CARD.md  HANDOFF.md  REPO_MAP.md  diarization_gate_report.md
docs/progress/: week1-2-audit.md  week1-audit.md  week1.md  week2-plan.md  week2.md  week3-plan.md
scripts/: asr_benchmark.py  build_calls.py  dataset_stats.py  degrade_calls.py  diarization_gate.py  env_check.py  fetch_harpervalley.py  gen_scripts.py  register_synthetic.py  verify_dataset.py
tests/: README.md  test_asr.py  test_assembler.py  test_diarization_metrics.py  test_harpervalley.py  test_real_anchor.py  test_registry.py  test_schema.py  test_store.py  test_synth_banks.py  test_synth_generator.py  test_synth_schema.py  test_synth_summary.py  test_synthetic.py  test_telephone.py  test_verify.py
(+22 files in other folders)
