[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "callqa"
version = "0.1.0"
description = "Evaluation-first support call intelligence"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
include = ["callqa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
